<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".presentation.activity.LoginActivity">

    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/et_sign_in_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/account"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="Email"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_sign_in_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/key"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"

        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/tv_sign_in_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="forgotPasswordActivity"
        android:text="Forgot Password?"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_in_password"
        app:layout_constraintVertical_bias="0.306"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/buttonDisabledColor"
        android:enabled="false"
        android:drawablePadding="10dp"
        android:textColor="#554B4B"
        android:elevation="3dp"
        android:padding="13dp"
        android:text="Sign In"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:drawablePadding="10dp"
        android:padding="13dp"
        android:text="Don't have an Account?"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_in_password"
        app:layout_constraintVertical_bias="0.108"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:onClick="signUpActivity"
        android:padding="13dp"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="#1E44A3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.8" />

    <ProgressBar
        android:id="@+id/pb_sign_in"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/progress_bar"
        android:elevation="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reg_img" />

</androidx.constraintlayout.widget.ConstraintLayout>