<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary"
    android:background="@color/colorPrimary"
    tools:context=".presentation.activity.DashboardActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/niconne"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="Welcome to eFashion Store"
        android:textAllCaps="false"
        android:textSize="45sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="35dp"
        android:src="@drawable/ic_launcher"
        />

    <Button
        android:id="@+id/btnNavigateToSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:layout_marginHorizontal="35dp"
        android:padding="13dp"
        android:text="Signup"
        android:textSize="19dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        />

    <Button
        android:id="@+id/btnNavigateToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:backgroundTint="@color/buttonColor"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:text="Login"
        android:textSize="19dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        />

</LinearLayout>