<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ce0000"
    tools:context=".presentation.activity.SignUpActivity">

    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_sign_up_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="Full Name"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_sign_up_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/account"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_sign_up_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/keylog"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:padding="13dp"
        android:hint="Password (at lease 5 character)"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_sign_up_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/keylog"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint=" ConfirmPassword"
        android:inputType="textPassword"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:backgroundTint="@color/buttonDisabledColor"
        android:enabled="false"
        android:drawablePadding="10dp"
        android:textColor="#554B4B"
        android:elevation="3dp"
        android:padding="13dp"
        android:text="Signup"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:drawablePadding="10dp"
        android:padding="13dp"
        android:text="Already Have an Account?"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:onClick="loginActivity"
        android:padding="13dp"
        android:text="Log In"
        android:textAllCaps="false"
        android:backgroundTint="#1E44A3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00CE86"
        android:drawablePadding="10dp"
        android:gravity="end"
        android:onClick="skipToMainActivity"
        android:padding="13dp"
        android:text="Signup Later"
        android:textAllCaps="false"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.555"
        app:layout_constraintWidth_percent="0.8" />

    <ProgressBar
        android:id="@+id/pb_sign_up"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/progress_bar"
        android:elevation="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reg_img"
         />


</androidx.constraintlayout.widget.ConstraintLayout>
